libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/as-1.jsonc
//@ run: fail
//@ description: is/1 should error out
["::kernel::special_form::as", { "#literal": true }]
//~^ ERROR expected 2 arguments to `as`, found 1
